fix dark mode

--- a/_sass/minima/dark-mode.scss
+++ b/_sass/minima/dark-mode.scss
@@ -1,4 +1,4 @@
-$high-emph: rgba(white, 0.87); // Colour 1 -> White
+$high-emph: rgba(rgb(15, 7, 7), 0.87); // Colour 1 -> White
 $med-emph: rgba(white, 0.69); //Noice
 $low-emph: rgba(white, 0.38);
 $dark-grey : #121212; // Colour 2
